# mangotoon

./: .dockerignore  .env.example  .gitignore  CODEX_PHASE_0_PROMPT.txt  Dockerfile  README.md  SPEC.md  SPEC_REBUILT.md  TELEGRAM_HANDOFF.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.bat
app/: __init__.py  main.py
app/core/: config.py
app/models/: __init__.py  comic.py
app/routers/: downloads.py  history.py  library.py  reader.py  settings.py  sources.py
app/services/: download_manager.py  downloader.py  llm_engine.py  models.py  scraper.py  source_registry.py  storage.py
app/sources/: __init__.py  base.py  fake.py  mangadex.py
codex_manga_app_phase_prompts/: CODEX_ALL_PHASES_PROMPT_PACK.md  CODEX_MVP_PHASE_CHECKLIST.md  CODEX_PHASE_00_cleanup_baseline.txt  CODEX_PHASE_01_local_storage_library_api.txt  CODEX_PHASE_02_frontend_library_ui.txt  CODEX_PHASE_03_mangadex_metadata_adapter.txt  CODEX_PHASE_04_download_manager.txt  CODEX_PHASE_05_reader.txt  CODEX_PHASE_06_settings.txt  CODEX_PHASE_07_polish_release_readiness.txt
docs/: PROJECT_LOG.md
frontend/: comic.html  history.html  index.html  reader.html  settings.html
scripts/: init_data.py
tests/: __init__.py  test_api.py  test_download_controls.py  test_download_manager.py  test_frontend_api.py  test_history.py  test_init_data.py  test_library.py  test_library_detail.py  test_library_filter.py  test_mangadex_adapter.py  test_phase11_adapter_first.py  test_reader.py  test_refresh.py  test_services.py  test_settings_expanded.py  test_sources.py
(+7 files in other folders)
